syntax = "proto3";

package pb;
import "buy_order.proto";

option go_package = "peerbill-trader-api/pb";

message AcceptBuyOrderRequest {
    int64 id = 1;
    string username = 2;
    string wallet_address = 3;
    string crypto = 4;
    float amount = 5;
}

message AcceptBuyOrderResponse {
    repeated BuyOrder buyOrders = 1;
}